--- a/tex/theory.tex
+++ b/tex/theory.tex
@@ -1,3 +1,10 @@
 \chapter{Standard Model}
 
 \chapQuote{A very profound sentence... }{Its author}
+
+
+\cite{Glashow1961579}
+
+\cite{Salam1964168}
+
+\cite{PhysRevLett.18.507}
