--- a/thesis.tex
+++ b/thesis.tex
@@ -4,10 +4,9 @@
 
 %%==============================
 % Link to all project .bib
-\addbibresource{ 
-  {bib/theory.bib}
-  {bib/atlas.bib}
-}
+\addbibresource{bib/theory.bib}
+\addbibresource{bib/atlas.bib}
+
 %%==============================
 % The path to the figures
 \graphicspath{{./figures/}}
