Add modified files

--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,1 +1,23 @@
-\chapter{Abstract}
+\cleardoublepage
+\section*{\textsc{\huge Abstract}}
+\addstarredchapter{Abstract}
+
+
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus molestie tellus at sagittis imperdiet. Donec mattis massa sodales, pretium purus vitae, vulputate urna. Phasellus lacus magna, interdum ut lorem sit amet, pellentesque pellentesque nibh. Vivamus erat leo, pulvinar vel aliquet eget, vestibulum sed lacus. Praesent id sagittis sapien, a lacinia massa. Integer pulvinar enim odio, eu imperdiet massa vehicula non. In consectetur dui id euismod fringilla. Aliquam vitae facilisis lorem. Etiam pharetra nisi tellus, in varius quam rhoncus ut. Morbi ac dui dolor. Fusce pretium imperdiet tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed orci ante, mattis vitae mollis ut, convallis nec turpis.
+
+Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean vitae dolor erat. Nam ac elementum mi, eget porttitor dui. Vivamus eu massa faucibus arcu fermentum lobortis. Pellentesque sollicitudin tortor auctor, fringilla ante eu, tempus urna. Curabitur neque risus, mollis non imperdiet ut, tempor a justo. Nunc at viverra est. Aenean finibus nunc lacinia urna bibendum tempor. Vivamus placerat odio odio. Pellentesque eu nulla sed libero cursus molestie. Phasellus nisl purus, finibus quis felis sed, vulputate sagittis ante. Suspendisse potenti. Donec eu nulla mattis, posuere turpis eget, condimentum felis. Vestibulum sit amet elit dui.
+
+Proin a luctus mauris. Proin eget tempor augue. Praesent non facilisis nisi, quis ultrices diam. Morbi ante nibh, volutpat eget est posuere, dapibus accumsan erat. Cras consequat mattis venenatis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus justo augue, sagittis eu lorem sed, aliquam suscipit arcu. Quisque facilisis neque nunc, in suscipit mauris scelerisque vulputate. Aliquam dapibus vehicula dolor, ac ornare eros sagittis in. Suspendisse quis turpis sapien. In malesuada tempus magna in dignissim. Curabitur eu lectus ac ipsum malesuada venenatis. Vivamus lorem metus, eleifend id eros ac, volutpat viverra mauris. Duis tincidunt ipsum sit amet nulla accumsan aliquam. Nam eget massa risus. Nulla facilisi.
+
+
+\vskip1cm
+\hrule
+
+\section*{\textsc{\huge Résumé}}
+\addstarredchapter{Résumé}
+
+
+Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam id quam felis. Cras imperdiet eu ante at vulputate. Pellentesque tristique in felis vel rutrum. Nulla efficitur, purus et lobortis tristique, odio augue volutpat arcu, id vestibulum velit turpis ac leo. Quisque pretium, mi id placerat fermentum, ante metus commodo dui, vel elementum nisi lectus vitae lacus. Phasellus in lorem quis lacus eleifend elementum et at tellus. Praesent blandit, lorem et consequat congue, elit dui fringilla justo, vel venenatis odio lorem vel mauris. Nulla imperdiet leo vitae est facilisis tempus. Vestibulum sollicitudin leo risus. Mauris et hendrerit tortor. Mauris sit amet mi ac sapien ultrices pellentesque et id velit. Nulla dignissim imperdiet quam sit amet condimentum. Donec sed sodales odio.
+
+Proin suscipit sem et risus venenatis, imperdiet dictum arcu fermentum. Vivamus ornare volutpat mattis. Sed enim metus, tempus sed interdum eget, pulvinar malesuada arcu. Praesent ultrices tellus arcu. Donec nec hendrerit leo. Nulla pharetra orci convallis urna dictum porttitor. Suspendisse porttitor sit amet nunc quis dapibus. In hac habitasse platea dictumst. Morbi placerat magna libero, in tristique nibh ullamcorper non. In hac habitasse platea dictumst. Aliquam sed tortor vehicula, hendrerit risus a, dignissim nunc. Aliquam porttitor eleifend diam, nec consequat nibh congue a. 
