--- a/thesis.tex
+++ b/thesis.tex
@@ -20,7 +20,7 @@
 \unilogo{figures/university.png}
 \lablogo{figures/lal.jpg}
 \title{The Thesis full title}
-\author{Estelle Scifo}
+\author{Future Doctor Name}
 \university{Université Paris Sud}
 \docschool{\'Ecole Doctorale PNC}
 \lab{Laboratoire de l'Accélérateur Linéaire}
